# Howell-Technologies-Portal

./: .gitignore  AI_CONTEXT.md  Dockerfile  README.md  package-lock.json  package.json  tsconfig.base.json
.github/workflows/: ci.yml  deploy-operator-portal-pages.yml  deploy-operator-ui-cloud-run.yml  deploy-poc-api-cloud-run.yml
Howell-Portal/Admin-Portal-BE/poc-api/: .dockerignore  .env.cloudrun.example  Dockerfile  README.md  alembic.ini  pyproject.toml  requirements.txt  test_poc_api.db
Howell-Portal/Admin-Portal-BE/poc-api/alembic/: env.py  script.py.mako
Howell-Portal/Admin-Portal-BE/poc-api/alembic/versions/: 0001_create_tables.py
Howell-Portal/Admin-Portal-BE/poc-api/app/: __init__.py  config.py  database.py  deps.py  main.py  models.py  schemas.py
Howell-Portal/Admin-Portal-BE/poc-api/app/routers/: auth.py  poc.py  reports.py  runtime_status.py
Howell-Portal/Admin-Portal-BE/poc-api/app/services/: ms_config.py  msal_client.py  operator_auth_store.py  powerbi.py
Howell-Portal/Admin-Portal-BE/poc-api/tests/: conftest.py  test_auth_routes.py  test_poc_routes.py  test_reports_routes.py  test_runtime_status_routes.py
Howell-Portal/Admin-Portal-UI/: .env.docker.example  .gitignore  AI_CONTEXT.md  Dockerfile  README.md  build.js  docker-compose.yml  nginx.conf  package-lock.json  package.json
Howell-Portal/Portal-Library/: README.md  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.lib.json  vite.config.ts
apps/client-portal-demo/: package.json  tsconfig.json  vite.config.ts
apps/operator-portal/: index.html  package.json  (+1 more)
(+81 files in other folders)
